--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,12 @@ dependencies {
 
     //ViewBindingDelegate
     implementation 'com.kirich1409.viewbindingpropertydelegate:vbpd-noreflection:1.4.1'
+
+    //Camera
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha04"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha04"
+    implementation "androidx.camera:camera-view:1.0.0-alpha24"
+
+    //Barcode
+    implementation 'com.google.mlkit:barcode-scanning:16.1.2'
 }
