--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
 
     //Barcode
     implementation 'com.google.mlkit:barcode-scanning:16.1.2'
+
+    // Coil
+    implementation "io.coil-kt:coil:1.1.1"
 }
