--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".root.presentation.SportApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SportsApp">
+        android:theme="@style/Theme.SportsApp"
+        android:usesCleartextTraffic="true">
         <activity android:name=".root.presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
