--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SportsApp"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.modo.modo.sportsapp.base.root.presentation.MainActivity">
+        <activity
+            android:name="com.modo.modo.sportsapp.base.root.presentation.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
